add release seat
