# swagger-output.json
@@ -2803,6 +2803,53 @@
         }
       }
     },
+    "/api/bookings/release-seat": {
+      "patch": {
+        "tags": [
+          "Bookings"
+        ],
+        "summary": "Release seats for a movie booking",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Release seats successfully",
+            "content": {
+              "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "Release old seats successfully",
+                  "data": {}
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "movieBookingId": "67d6f39cd8a4d18fb21461f3"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/statistics/dashboard": {
       "get": {
         "tags": [
